2005-03-10  GOTO Masanori  <gotom@debian.or.jp>

	* sysdeps/hppa/configure.in: Remove old Makefile leftovers.
	* sysdeps/hppa/configure: Regenerated.

2005-03-08  Roland McGrath  <roland@redhat.com>

	* sysdeps/gnu/errlist-compat.awk: Use NERR in all array decls, so
	array types match exactly in C alias decls.

2005-03-07  Ulrich Drepper  <drepper@redhat.com>

	* malloc/arena.c (ptmalloc_init): Recognize MALLOC_PERTURB_ and call
	mallopt appropriately.
	* malloc/malloc.h: Define M_PERTURB.
	* malloc/malloc.c (perturb_byte): New variable.
	(alloc_perturb, free_perturb): New macros.
	(_int_malloc): Before returning, overwrite the memory if this is
	requested.
	(_int_free): Overwrite freed memory if requested.
	(mALLOPt): Handle M_PERTURB.
	* test-skeleton.c: Add call to mallopt with M_PERTURB command.

	* elf/dl-close.c (_dl_close): Decrement l_opencount before
	printing debug message.
	* elf/dl-open.c (dl_open_worker): Always print the new opencount
	in debug messages.

2005-03-06  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-close.c (_dl_close): Unify debug message format.

	* elf/dl-close.c (_dl_close): Print debug message just before
	destroying a link map.

	* elf/do-lookup.h (do_lookup_x): Add namespace info to debug output.
	* elf/dl-version.c (match_symbol): Likewise.

	* posix/bits/unistd.h (pread): Fix typo in __USE_FILE_OFFSET64 code.

	* debug/recv_chk.c (__recv_chk): Always fail if request could
	overflow the buffer.
	* debug/recvfrom_chk.c (__recvfrom_chk): Likewise.
	* socket/bits/socket2.h (recv): Avoid calls to the _chk variant if
	we know the call succeeds.
	(recvfrom): Likewise.

2005-03-05  Ulrich Drepper  <drepper@redhat.com>

	* posix/regexec.c (check_node_accept_bytes): Correct cast to avoid
	warning.
	* posix/regex_internal.c (re_string_reconstruct): Add cast to
	avoid warning.
	(build_wcs_upper_buffer): Change type of bug to plain char.
	* locale/weightwc.h (findidx): Add casts to avoid warnings.